...
                                .clickable { showSkipAlert = true },
                    )

                    Spacer(
                        Modifier
                            .height(1.dp)
                            .testTag("verifyWords.bottomPadding"),
                    )
                    }
                }
            }

            // skip verification confirmation dialog
...
