...
                                        .testTag("sendFlowConfirm.swipeToSend"),
                            )

                            Spacer(
                                Modifier
                                    .height(1.dp)
                                    .testTag("sendFlowConfirm.bottomPadding"),
                            )
                        }
                    }
                }
            }
        }
...
